css/style.css
/* --------------- global values -------------- */
:root{ /*using variables makes it easier to make quick adjustments*/
    font-size: 100%; /*prevents custom browser zooms from improperly impacting text sizes*/

    --text-title: 3.6em;
    --text-title2: 2.5em;
    --text-h2: 1.5em;
    --text-h2-2: 1.2em;
    --text-subtitle: 1.2em;
    --text-subtitle2: 0.9em;
    --text-flair: 0.95em;
    --text-flair2: 0.80em;
    --text-h3: 1.8em;
    --text-h3-mobile: 1.2em;
    --text-h3-mobile2: 0.95em;
    --text-body: 1.15em;
    --text-body-mobile: 0.75em;
    --text-body-mobile2: 0.65em;

    --colour-splash: rgb(162, 9, 9);
    --colour-splash2: rgb(121, 75, 37);
    --colour-basic: rgb(255, 231, 200);
    --colour-basic2: rgb(255, 254, 247);
    --colour-citations: rgb(66, 66, 66);
    --colour-background: black;

    --num-PBM: 7; /*number of builds in the PBM section*/
    --num-DRM: 5; /*number of builds in the DRM section*/

    background-color: var(--colour-background);
    color: var(--colour-basic); /*setting the default text colour to a light colour since default background colour is black.*/
}



/* ------------------------- main page ------------------------ */
.main-head{ /*main header*/
    display:grid;
    grid-template-rows: 75px 35px 40px;
    background-color: var(--colour-splash); 
}
.main-head h1{
    text-align: center;
    font-size: var(--text-title);
    font-style: italic;
    color: var(--colour-basic2); 
}
.main-head h3{ /*this h3 used for subtitles only*/
    grid-column: 1/-1;
    text-align: center;
    padding-left: 270px;
    font-size: var(--text-subtitle);
}
.main-head p{
    text-align: center;
    color: var(--colour-background);
    font-size: var(--text-flair);
    font-weight: bold;
}

.front-page{/*main body*/
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: 55px 320px 55px 320px 15px;
    grid-column-gap: 20px;
}
.front-page h2{
    grid-column: 1/-1;
    text-align: center;
    font-size: var(--text-h2);
}


.image-array-DRM, .image-array-PBM {
    grid-column: 2/-2;

    display: grid;
    grid-column-gap: 20px;
    padding-top: 10px;
    overflow-x: auto;
    scrollbar-width: none; /*not entirely sure if this works on all browsers...*/
}
.image-array-PBM{grid-template-columns: repeat(var(--num-PBM), 1fr);}
.image-array-DRM{grid-template-columns: repeat(var(--num-DRM), 1fr);}
.thumbnail{width:400px; height:300px;} /*must constrain size for .SVGs*/
button{
    background-color: var(--colour-basic2);
    font-size: 2em;
    font-weight: 700;
}
.front-page cite{
    grid-column: 1/-1;
    grid-row: -1;
    font-size: var(--text-flair);
    font-style: italic;
    color: var(--colour-citations); 
}

@media(max-width: 32em){ /*make the title smaller for small screens so it doesn't overflow*/
    .main-head{grid-template-rows: 49px 35px 30px;}
    .main-head h1{font-size: var(--text-title2);}
    .main-head h3{
        padding-left: 175px;
        font-size: var(--text-subtitle2);
    }
    .main-head p{font-size: var(--text-flair2);}
    .front-page h2{font-size: var(--text-h2-2);}
    .front-page {grid-template-rows: 45px 320px 45px 320px 10px;}
    .front-page cite{font-size: var(--text-flair2);}
}










/* ------------------------- info pages ------------------------ */
.info-page{
    display: grid;
    grid-template-columns: 385px 1fr;
    column-gap: 10px; row-gap: 5px; /*row gap only for mobile layout, column for other layouts*/
    min-height: 0;
}
/*----extra info on the builds----*/
.details{
    grid-column: 1;

    display: grid;
    background-color: var(--colour-splash2);
    grid-template-rows: 60px 80px 1fr 60px;
    padding: 10px;
    max-width: 385px;
    min-height: 91vh; /*maintain's info section's height if low text amount in description*/
    max-height: calc(100vh - 40px); /*prevents info section from overflowing so that the return button is off-screen (with full height pages)*/
}


.desc{font-size: var(--text-body);}
.colour-split{color: var(--colour-basic2);}
.details h1+p{font-size: var(--text-flair);}

.details h1{
    color: var(--colour-basic2);
    font-size: var(--text-h3);

}
.details h1::before{ /*overline details to h1*/
    content:"";
    display:block;
    width:auto;
    height:5px;
    background-color: var(--colour-basic);
}
.details h1::after{ /*underline details to h1*/
    content:"";
    display:block;
    width:auto;
    height:5px;
    background-color: var(--colour-basic);  
}

/*link functionality:*/
a:link, a:visited{color:var(--colour-basic);}
a:hover{color: var(--colour-basic2)}
/*return button specific stuff:*/
.return-link{ 
    text-decoration: none;
    font-size: 4em;
}

/*----extra images for the builds----*/
.bonus-images{
    grid-column: 2;

    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    height: calc(100vh - 20px); /*images take up full height of viewport excluding the padding of the parent grid*/
    overflow-y: auto; /*when too many images exist, scroll vertically for more*/
    padding-right: 10px; /*right padding added here to put space left of scroll bar*/
    column-gap: 10px; row-gap: 10px;
}
.small-image{
    width: 100%; /*set the images to tile the space as efficiently as possible, even on mobile*/
    min-width: 80px; 
    height: auto;
}

@media(max-width: 76em){ /*maintain image sizes by lowering column count*/
    .bonus-images{grid-template-columns: 1fr 1fr;}
}
@media(max-width: 54em){ /*maintain image sizes by lowering column count*/
    .bonus-images{grid-template-columns: 1fr;}
}


/*------------------mobile/thin window layouts-----------------*/
@media(max-width: 35em){ 
    .info-page{
        grid-template-columns: 1fr;
        grid-template-rows: 52vh  calc(48vh - 25px); /*needs to add up to 100vh; therefore must subtract the 5 row spacing, 20 top/bottom padding*/
        
    }
    .details{
        grid-template-rows:  35px 60px 1fr; /*adjust row amount and spacing for new text sizes/positions*/
        grid-template-columns: 1fr  13vw; /*13vw is roughly smallest size that can fit the arrow well*/
        grid-column: 1/-1;
        padding-bottom: none;
        max-width: none;
        min-height: 48vh;
    }
    .desc{font-size: var(--text-body-mobile); grid-column: 1/-1;}
    .details h1+p{font-size: var(--text-body-mobile); grid-column: 1/-1;}
    .details h1{font-size: var(--text-h3-mobile);}
    .details h1::before{height: 3px;}
    .details h1::after{height: 3px;}

    .return-link{ /*move the return button to optimize limited available space*/
        grid-column: 2; 
        grid-row: 1;
        font-size: 3em;
    }
    .bonus-images{
        grid-column: 1; 
        grid-template-columns: 1fr 1fr;
        height: calc(48vh - 20px); /*images take up full available height of viewport excluding the padding of the parent grid*/
        column-gap: 5px; row-gap: 5px; padding-right: 5px; /*since limited space, make padding smaller*/
    }
}

@media(max-width: 19.5em){ /*special font sizing for ultra-thin devices/windows*/
    .desc{font-size: var(--text-body-mobile2);}
    .details h1+p{font-size: var(--text-body-mobile2);}
    .details h1{font-size: var(--text-h3-mobile2);}
    .return-link{font-size: 2.5em;}
}

